--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: TechService
+title: ITS4YOU
 baseurl: ""  # Laissez vide si votre site est à la racine (votre-pseudo.github.io)
 url: "https://votre-pseudo.github.io"
 theme: minima
